--- a/styles.css
+++ b/styles.css
@@ -442,14 +442,13 @@ footer {
 }
 
 .confirmation-container {
-    background-color: #fff;
+    background: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 30px;
     width: 80%;
-    max-width: 600px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     text-align: center;
