--- a/styles.css
+++ b/styles.css
@@ -432,6 +432,7 @@ footer {
     background: #fff; /* White background for the box */
     border-radius: 10px;
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
+    z-index: 30;
 }
 
 #confirmationPage {
@@ -441,13 +442,11 @@ footer {
     min-height: 100vh;
     width: 100vw; /* Ensure it spans the entire viewport */
     background-color: #ffcccb;
-    transition: opacity 0.3s ease-in-out;
 }
 
 /* Active state for showing the confirmation page */
 #confirmationPage.show {
     display: flex !important; /* Render the page */
-    opacity: 1 !important; /* Ensure it becomes visible */
 }
 
 //* old code for confirmationcontainer *//
