--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Body styling */
 body {
     font-family: 'Arial', sans-serif;
-    background: #4d4949; /* Matte black background */
+    background: #595555; /* Matte black background */
     color: #333;
     display: flex;
     justify-content: center;
@@ -33,7 +33,7 @@ body {
 
 /* Header */
 header h1 {
-    color: #ab2230; /* Royal red colour */
+    color: #8b0000; /* Royal red colour */
     font-size: 3em;
     margin-bottom: 20px;
 }
@@ -41,7 +41,7 @@ header h1 {
 /* Romantic message section */
 .message h2 {
     font-size: 1.8em;
-    color: #ab2230; /* Royal red colour */
+    color: #8b0000; /* Royal red colour */
     margin-bottom: 10px;
 }
 
@@ -57,7 +57,7 @@ header h1 {
 
 .date-details h3 {
     font-size: 1.5em;
-    color: #ab2230; /* Royal red colour */
+    color: #8b0000; /* Royal red colour */
 }
 
 .date-details p {
@@ -78,7 +78,7 @@ header h1 {
 }
 
 #accept-btn:hover {
-    background-color: #d1006d; /* Darker red */
+    background-color: #ab2230; /* Darker red */
 }
 
 /* Reject Button styling */
@@ -186,7 +186,7 @@ footer {
 /* Page Title Inside White Box */
 .white-box h1 {
     font-size: 2em;
-    color: #ab2230; /* Royal red on hover */
+    color: #8b0000; /* Royal red on hover */
     text-align: center;
     margin-bottom: 20px;
 }
@@ -372,7 +372,7 @@ footer {
 
 /* Submit Button */
 .submit-btn {
-    background: linear-gradient(to right, #ab2230, #870000); /* Royal red gradient */
+    background: #ff6f61; /* Warm red colour */
     color: white;
     padding: 12px 20px;
     font-size: 1.2em;
@@ -384,7 +384,7 @@ footer {
 }
 
 .submit-btn:hover {
-    background: linear-gradient(to right, #870000, #a30202);
+    background: #ab2230; /* Darker red */
 }
 
 /* Footer inside white box */
@@ -425,7 +425,7 @@ footer {
     justify-content: center;
     align-items: center;
     min-height: 50vh;
-    background-color: #4d4949; /* Matte black background */
+    background-color: #595555; /* Matte black background */
     padding: 20px; /* Adds padding for smaller screens */
 }
 
@@ -479,7 +479,7 @@ footer {
 }
 
 .home-btn {
-    background: linear-gradient(to right, #ab2230, #870000);
+    background: #ff6f61; /* Warm red colour */
     color: white;
     padding: 12px 20px;
     font-size: 1.2em;
@@ -491,5 +491,5 @@ footer {
 }
 
 .home-btn:hover {
-    background: linear-gradient(to right, #870000, #a30202);
+    background: #ab2230; /* Darker red */
 }
