--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Body styling */
 body {
     font-family: 'Arial', sans-serif;
-    background: #595555; /* Matte black background */
+    background: #f4cbb7; /* Matte black background */
     color: #333;
     display: flex;
     justify-content: center;
@@ -425,7 +425,7 @@ footer {
     justify-content: center;
     align-items: center;
     min-height: 50vh;
-    background-color: #595555; /* Matte black background */
+    background-color: #f4cbb7; /* Matte black background */
     padding: 20px; /* Adds padding for smaller screens */
 }
 
