--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 
 /* Header */
 header h1 {
-    color: #8b0000; /* Royal red colour */
+    color: #ab2330; /* Royal red colour */
     font-size: 3em;
     margin-bottom: 20px;
 }
@@ -41,7 +41,7 @@ header h1 {
 /* Romantic message section */
 .message h2 {
     font-size: 1.8em;
-    color: #8b0000; /* Royal red colour */
+    color: #ab2330; /* Royal red colour */
     margin-bottom: 10px;
 }
 
@@ -57,7 +57,7 @@ header h1 {
 
 .date-details h3 {
     font-size: 1.5em;
-    color: #8b0000; /* Royal red colour */
+    color: #ab2330; /* Royal red colour */
 }
 
 .date-details p {
@@ -186,7 +186,7 @@ footer {
 /* Page Title Inside White Box */
 .white-box h1 {
     font-size: 2em;
-    color: #8b0000; /* Royal red on hover */
+    color: #ab2330; /* Royal red on hover */
     text-align: center;
     margin-bottom: 20px;
 }
