--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ footer {
     align-items: center;
     justify-content: flex-start; /* Ensures content is spaced */
     min-height: 90vh; /* Make sure it stretches the full height */
-    margin: 20px auto; /* Centered */
+    margin: 20px 20px 30px 30px; /* Centered */
     overflow-x: auto; /* Enable horizontal scroll */
     overflow-y: auto; /* Enable vertical scroll */
 }
@@ -241,6 +241,7 @@ footer {
     display: flex;
     flex-wrap: nowrap; /* Prevents wrapping */
     overflow-x: auto;  /* Adds horizontal scrolling if too many items */
+    overflow-y: auto; /* Enable horizontal scrolling */
     justify-content: flex-start; /* Aligns items to the left */
     gap: 15px;
     padding: 20px;
@@ -266,6 +267,7 @@ footer {
 /* Itinerary Item Styling */
 .itinerary-item {
     flex: 0 0 auto; /* Prevent shrinking or wrapping */
+    width: 150px; /* Adjust as necessary */
     display: flex;
     flex-direction: column;
     align-items: center;
